--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,37 @@ a{
   border-radius: 50%;
   padding: 1em;
 }
+
+/* HOMEPAGE */
+
+.home{
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.posts-list{
+  display: flex;
+  flex-direction: column;
+}
+
+.post-summary{
+  margin: 10px 0;
+  padding: 10px;
+  border: 1px solid gray;
+  border-radius: 15px;
+  display: flex;
+  min-height: 20em;
+  max-height: 35em;
+}
+
+.post-summary div:nth-child(1){
+  margin: 15px;
+  min-height: 100%;
+  width: 25em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
