--- a/src/index.css
+++ b/src/index.css
@@ -89,7 +89,8 @@ a{
   align-items: center;
   border-radius: 5px;
 }
-          /* profile picture wrapper */
+
+  /* profile picture wrapper */
 .signed-in-out-links li:nth-child(3){
   border-radius: 50%;
 }
@@ -135,4 +136,10 @@ a{
   justify-content: center;
   align-items: center;
   overflow: hidden;
+}
+
+/* POST DETAILS PAGE */
+
+.post-details{
+  margin-top: 4em;
 }
