--- a/src/index.css
+++ b/src/index.css
@@ -143,3 +143,33 @@ a{
 .post-details{
   margin-top: 4em;
 }
+
+/* LOGIN AND REGISTER */
+
+.login-form {
+  position: fixed;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px #888888;
+
+  width: 100%;
+  height: 100%;
+
+  margin: 200px;
+  box-sizing: margin-box;
+}
+
+
+.login-form label{
+  padding: 1em;
+  box-sizing: border-box;
+}
