--- a/src/index.css
+++ b/src/index.css
@@ -154,20 +154,21 @@ a{
   align-items: center;
   justify-content: center;
 
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  right: 0;
+  /* transform: translate(-50%, -50%); */
   background-color: white;
   border-radius: 10px;
   box-shadow: 0px 0px 10px #888888;
 
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 1000px);
+  height: calc(100% - 600px);
 
-  margin: 200px;
-  box-sizing: margin-box;
+  margin: 300px 500px;
+
+  outline: 1000px solid rgba(50, 50, 50, 0.5);
 }
-
 
 .login-form label{
   padding: 1em;
