--- a/src/index.css
+++ b/src/index.css
@@ -157,7 +157,6 @@ a{
   top: 0;
   left: 0;
   right: 0;
-  /* transform: translate(-50%, -50%); */
   background-color: white;
   border-radius: 10px;
   box-shadow: 0px 0px 10px #888888;
@@ -168,6 +167,12 @@ a{
   margin: 300px 500px;
 
   outline: 1000px solid rgba(50, 50, 50, 0.5);
+}
+
+.close-button{
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 .login-form label{
