--- a/src/index.css
+++ b/src/index.css
@@ -152,20 +152,17 @@ a{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 
-  top: 0;
-  left: 0;
-  right: 0;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
   background-color: white;
   border-radius: 10px;
   box-shadow: 0px 0px 10px #888888;
 
-  width: calc(100% - 1000px);
-  height: calc(100% - 600px);
 
-  margin: 300px 500px;
-
+  padding: 100px 50px;
   outline: 1000px solid rgba(50, 50, 50, 0.5);
 }
 
@@ -173,9 +170,18 @@ a{
   position: absolute;
   top: 10px;
   right: 10px;
+  cursor: pointer;
 }
 
 .login-form label{
   padding: 1em;
   box-sizing: border-box;
+}
+
+.login-form input {
+  padding: 0.5em;
+  margin: 0 1em;
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
