--- a/src/index.css
+++ b/src/index.css
@@ -185,3 +185,12 @@ a{
   border: 1px solid #ccc;
   border-radius: 5px;
 }
+
+.login-signup-form input[type="date"] {
+  padding: 12px 20px;
+  margin: 8px 20px;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 2px solid gray;
+  font-size: 16px;
+}
