--- a/src/index.css
+++ b/src/index.css
@@ -152,7 +152,7 @@ a{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 
   top: 50%;
   right: 50%;
@@ -193,4 +193,12 @@ a{
   border: none;
   border-bottom: 2px solid gray;
   font-size: 16px;
+}
+
+.input-wrapper {
+  margin: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
