--- a/src/index.css
+++ b/src/index.css
@@ -70,50 +70,61 @@ a{
   display: flex;
   justify-content: space-between;
   width: 100%;
+  position: relative;
 }
 
 .brand-logo{
   padding: 1em;
 }
 
-.signed-in-out-links{
+.signed-in-out-links {
   display: flex;
-  align-items: center;
+  justify-content: flex-end;
+  list-style: none;
 }
 
-.signed-in-out-links button{
-  padding: 0.5em  1em;
-  cursor: pointer;
+.navbar-button {
+  background-color: #f5f5f5;
+  color: #333;
+  padding: 10px 15px;
+  border-radius: 4px;
+  margin-right: 10px;
+  font-size: 14px;
   border: 1px solid gray;
-  margin: 0 1em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
 }
 
-.signed-in-out-links button:hover{
-  background-color: red;
-  border: 1px solid white;
-  color: white;
+.notif-button:hover {
+  background-color: #eee;
+  cursor: pointer;
 }
 
-  /* profile picture wrapper */
+.profile-picture {
+  background-color: #f5f5f5;
+  color: #333;
 
-.signed-in-out-links button:nth-child(3){
+  padding: 10px;
+  margin-left: 10px;
+  width: 45px;
+  height: 45px;
+
   border-radius: 50%;
-  padding: 1.2em;
-  width: auto;
-}
+  border: 1px solid gray;
 
-
-.notif-button{
-  position: relative;
-}
-
-.notifications{
   position: absolute;
-  top: 2em;
+  right: 10px;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+
+.profile-picture a {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+
+.profile-picture:hover {
+  background-color: #eee;
+  cursor: pointer;
 }
 
 /* HOMEPAGE */
