--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,13 @@ a{
   list-style: none;
 }
 
+.signed-in-out-links button:hover {
+  background-color: red;
+  cursor: pointer;
+  color: white;
+  border: 1px solid red;
+}
+
 .navbar-button {
   background-color: #f5f5f5;
   color: #333;
@@ -124,7 +131,6 @@ a{
 
 .profile-picture:hover {
   background-color: #eee;
-  cursor: pointer;
 }
 
 /* HOMEPAGE */
