deleted bootstrap changed navbar

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,62 @@ svg{
   color: black;
 }
 
+/* NAVBAR */
+
+@import url('https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap');
+
+.nav-wrapper{
+  position: fixed;
+  left: 0;
+  height: calc(100% - 28px);
+  background-color: white;
+  padding: 8px 12px 20px;
+  width: 16%;
+  border-right: 1px solid rgb(199, 199, 199);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.nav-wrapper .container{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.nav-wrapper a{
+  color: black;
+  text-decoration: none;
+}
+
+.brand-logo h1{
+  padding: 25px 12px 16px;
+  margin-bottom: 19px;
+  color: black;
+  font-family: 'Oleo-Script';
+  font-size: 2.5rem;
+}
+
+.text-white svg {
+  border: none;
+}
+
+.container a:nth-child(n+2), .nav-wrapper footer, .search-bar{ 
+  padding: 12px;
+  margin: 4px 0;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+.nav-wrapper footer button, .container a button, .search-bar button{ 
+  border: none;
+  background-color: inherit;
+  padding-left: 16px;
+  font-size: 1rem;
+}
+
+/*------------------------*/
 .profile-setting-form{
 	max-width: 400px;
 }
