--- a/src/index.css
+++ b/src/index.css
@@ -220,6 +220,10 @@ svg{
   margin-bottom: 20px;
 }
 
+.post svg {
+  cursor: pointer;
+}
+
 .post-header{
   margin-bottom: 15px;
   display: flex;
@@ -233,6 +237,11 @@ svg{
   justify-content: center;
   text-decoration: none;
   color: inherit;
+  cursor: pointer;
+}
+
+.post-header label{
+  cursor: pointer;
 }
 
 .post-header a .profile-photo {
