--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,6 @@ table {
 
 /* NAVBAR */
 
-@import url('https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap');
 
 .nav-wrapper{
   position: fixed;
@@ -88,11 +87,10 @@ table {
   padding: 25px 12px 16px;
   margin-bottom: 19px;
   color: black;
-  font-family: 'Oleo-Script';
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
-.container a:nth-child(n+2), .nav-wrapper footer, .menu-bar{ 
+.container a:nth-child(n+2), .nav-wrapper footer, .menu-bar, .menu-bar-more{ 
   padding: 12px;
   margin: 4px 0;
   font-size: 1.5rem;
@@ -185,6 +183,34 @@ table {
 
 .notification:hover{
   background-color: rgb(240, 240, 240);
+}
+
+.plus-black-active path:nth-child(4){
+  color: white;
+}
+.plus-black-active path:nth-child(3){
+  color: white;
+}
+
+.more-dropdown-container{
+  position: absolute;
+  background: white;
+  bottom: 83px;
+  border: 1px solid rgb(224, 222, 222);
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgba(97, 97, 97, 0.4);
+  padding: 0.5rem;
+  width: 250px;
+  z-index: 999;
+}
+
+.more-dropdown-container .menu-bar{
+  font-size: 0.9rem;
+  padding: 1rem;
+}
+
+.more-dropdown-container .menu-bar:nth-child(3) label{
+  margin-left: 10px;
 }
 
 /*------------------------*/
