--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,7 @@ table {
   font-size: 2rem;
 }
 
-.container a:nth-child(n+2), .nav-wrapper footer, .menu-bar, .menu-bar-more{ 
+.container a:nth-child(n+2), .nav-wrapper footer, .menu-bar{ 
   padding: 12px;
   margin: 4px 0;
   font-size: 1.5rem;
@@ -207,12 +207,17 @@ table {
 
 .more-dropdown-container .menu-bar{
   font-size: 0.9rem;
-  padding: 1rem;
+  padding: 16px;
 }
 
 .more-dropdown-container .menu-bar:nth-child(3) button{
   margin-left: 10px;
   padding: 0;
+}
+
+.more-dropdown-container .menu-bar{
+  margin: 0;
+  min-height: 20px;
 }
 
 /*------------------------*/
