--- a/src/index.css
+++ b/src/index.css
@@ -1,59 +1,151 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:wght@100;300;400;500;700&family=Roboto:wght@100;300;500;700&display=swap');
 
 /* RESET CSS */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
-.icon-tabler-heart-active{
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.icon-tabler-heart-active {
   color: red;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 /* NAVBAR */
 
-
-.nav-wrapper{
+.nav-wrapper {
+  z-index: 1000;
   position: fixed;
   left: 0;
   height: calc(100% - 28px);
@@ -65,62 +157,70 @@ table {
   justify-content: space-between;
 }
 
-
-.nav-wrapper .container{
+.nav-wrapper .container {
+  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  width: 20vw;
+  transition: all 0.5s ease;
 }
 
-.nav-wrapper a{
-  color: black;
-  text-decoration: none;
+.nav-wrapper .container.active {
+  width: 59px;
 }
 
-.nav-wrapper a svg, .menu-bar svg {
+.nav-wrapper a svg,
+.menu-bar svg {
   width: 35px;
   text-align: start;
 }
 
-.brand-logo h1, .brand-logo svg{
+.brand-logo h1,
+.brand-logo svg {
   padding: 25px 12px 16px;
   margin-bottom: 19px;
   color: black;
   font-size: 2rem;
 }
 
-.container a:nth-child(n+2), .nav-wrapper footer, .menu-bar{ 
+.container a:nth-child(n+2),
+.nav-wrapper footer,
+.menu-bar {
   padding: 12px;
   margin: 4px 0;
   font-size: 1.5rem;
   display: flex;
-  justify-content: start;
+  justify-content: left;
   align-items: center;
   border-radius: 15px;
   cursor: pointer;
+  width: calc(100% - 24px);
 }
 
-.container a:nth-child(n+2):hover, .nav-wrapper footer:hover, .menu-bar:hover{
+.container a:nth-child(n+2):hover,
+.nav-wrapper footer:hover,
+.menu-bar:hover {
   background-color: rgb(240, 240, 240);
-  font-size: 30px;
 }
 
-.nav-wrapper footer button, .container a button, .menu-bar button{ 
+.nav-wrapper footer button,
+.container a button,
+.menu-bar button {
   border: none;
   background-color: inherit;
   padding-left: 16px;
   font-size: 1rem;
   cursor: pointer;
-  width: 14vw;
   text-align: start;
 }
 
-.notif-icon{
+.notif-icon {
   position: relative;
 }
 
-.notif-count{
+.notif-count {
   position: absolute;
   top: 10px;
   left: 28px;
@@ -138,9 +238,11 @@ table {
 }
 
 .dropdown-menu {
+  z-index: 0;
   position: fixed;
   top: 0;
-  left: 84px;
+  left: -25rem;
+  width: 25rem;
   background-color: white;
   display: flex;
   align-items: flex-start;
@@ -150,15 +252,23 @@ table {
   border-radius: 0 20px 20px 0;
   border-right: 1px solid rgb(224, 222, 222);
   box-shadow: 10px 0 5px -2px rgba(97, 97, 97, 0.1);
+  transition: all 0.5s ease;
+  opacity: 0;
 }
 
-.dropdown-menu h1{
-  font-size: 30px;
+.dropdown-menu.active {
+  left: 84px;
+  opacity: 1;
+  width: 25rem;
+}
+
+.dropdown-menu h1 {
+  font-size: 22px;
   font-weight: 700;
   padding: 25px 15px 15px;
 }
 
-.notif-by{
+.notif-by {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -169,7 +279,7 @@ table {
   padding: 15px 20px 15px;
 }
 
-.notif-by img{
+.notif-by img {
   width: 2.2rem;
   height: 2.2rem;
   margin-right: 15px;
@@ -177,23 +287,24 @@ table {
   object-fit: cover;
 }
 
-.notif-by strong{
+.notif-by strong {
   margin-right: 15px;
   font-weight: 700;
 }
 
-.notification:hover{
+.notification:hover {
   background-color: rgb(240, 240, 240);
 }
 
-.plus-black-active path:nth-child(4){
-  color: white;
-}
-.plus-black-active path:nth-child(3){
+.plus-black-active path:nth-child(4) {
   color: white;
 }
 
-.more-dropdown-container{
+.plus-black-active path:nth-child(3) {
+  color: white;
+}
+
+.more-dropdown-container {
   position: absolute;
   background: white;
   bottom: 83px;
@@ -205,17 +316,17 @@ table {
   z-index: 999;
 }
 
-.more-dropdown-container .menu-bar{
+.more-dropdown-container .menu-bar {
   font-size: 0.9rem;
   padding: 16px;
 }
 
-.more-dropdown-container .menu-bar:nth-child(3) button{
+.more-dropdown-container .menu-bar:nth-child(3) button {
   margin-left: 10px;
   padding: 0;
 }
 
-.more-dropdown-container .menu-bar{
+.more-dropdown-container .menu-bar {
   margin: 0;
   min-height: 20px;
 }
@@ -230,7 +341,7 @@ table {
   justify-content: center;
 }
 
-.row{
+.row {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -258,14 +369,14 @@ table {
   cursor: pointer;
 }
 
-.post-header{
-  margin-bottom: 15px;
+.post-header {
+  margin-bottom: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.post-header a{
+.post-header a {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -274,7 +385,7 @@ table {
   cursor: pointer;
 }
 
-.post-header label{
+.post-header label {
   cursor: pointer;
   font-size: 0.9rem;
 }
@@ -287,14 +398,14 @@ table {
   margin-right: 12px;
 }
 
-.profile-photo.navbar{
+.profile-photo.navbar {
   margin-right: 0;
 }
 
-.post .post-photo{
+.post .post-photo {
   width: 100%;
   border-radius: 5px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   border: 1px solid rgb(224, 222, 222);
 }
 
@@ -305,37 +416,37 @@ table {
   margin-bottom: 15px;
 }
 
-.interactions div svg{
+.interactions div svg {
   margin-right: 15px;
 }
 
-.post-description h4{
+.post-description h4 {
   font-weight: 700;
   margin-bottom: 10px;
   font-size: 0.9rem;
 }
 
-.post-description p{
+.post-description p {
   font-size: 0.9rem;
 }
 
 /*------------------------*/
-.profile-setting-form{
-	max-width: 400px;
+.profile-setting-form {
+  max-width: 400px;
 }
 
-.profile-picture-settings{
-	width: 200px;
-	height: 200px;
-	object-fit: cover;
-	border-radius: 100%;
+.profile-picture-settings {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 100%;
 }
 
 
 
 
 /* SIGNUP */
-.form-outline{
+.form-outline {
   position: relative;
 }
 
