--- a/src/index.css
+++ b/src/index.css
@@ -148,6 +148,7 @@ a {
   z-index: 1000;
   position: fixed;
   left: 0;
+  top: 0;
   height: calc(100% - 28px);
   background-color: white;
   padding: 8px 12px 20px;
@@ -376,7 +377,7 @@ a {
   justify-content: space-between;
 }
 
-.post-header a {
+.post-header .link-to-user {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -431,6 +432,100 @@ a {
 }
 
 /*------------------------*/
+
+/* PROFILE */
+
+.main-profile-container{
+  margin-left: 22vw;
+}
+
+.profile-container{
+  padding: 30px 20px 0;
+  margin:0 114px;
+  width: calc(100% - 268px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-data{
+  width: 100%;
+  display: flex;
+}
+
+.profile-picture{
+  width: 300px;
+  margin-right: 30px;
+  text-align: center;
+}
+
+.profile-picture img{
+  border-radius: 100%;
+}
+
+.username-edit{
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-data{
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+}
+
+.main-data div:nth-child(1) h5{
+  font-size: 18px;
+  margin-right: 15px;
+}
+
+.profile-username{
+  font-weight: 700;
+  font-size: 14px;
+}
+
+.profile-bio{
+  margin-top: 20px;
+  font-size: 14px;
+}
+
+.edit-button{
+  padding: 0px 16px;
+  background-color: rgb(240, 240, 240);
+  border-radius: 10px;
+  min-width: 69px;
+  height: 32px;
+  font-size: 14px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.post-followers{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1rem;
+  margin-bottom: 20px;
+}
+
+.post-followers div, .post-followers a{
+  margin-right: 40px;
+}
+
+.post-followers strong{
+  margin-right: 5px;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/*------------------------*/
 .profile-setting-form {
   max-width: 400px;
 }
@@ -476,3 +571,4 @@ a {
   justify-content: center;
   align-items: center;
 }
+
