--- a/src/index.css
+++ b/src/index.css
@@ -330,16 +330,14 @@ a {
 .more-dropdown-container .menu-bar {
   font-size: 0.9rem;
   padding: 16px;
+  margin: 0;
+  min-height: 20px;
+  width: calc(100% - 32px);
 }
 
 .more-dropdown-container .menu-bar:nth-child(3) button {
   margin-left: 10px;
   padding: 0;
-}
-
-.more-dropdown-container .menu-bar {
-  margin: 0;
-  min-height: 20px;
 }
 
 /*------------------------*/
@@ -662,11 +660,12 @@ a {
   margin: 0px 25px 25px;
 }
 
-.App{
+.signup-container{
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .form-container{
