--- a/src/index.css
+++ b/src/index.css
@@ -577,7 +577,7 @@ a {
   border-top: 1px solid rgba(97, 97, 97, 0.4);
   font-size: 12px;
   margin: 0 20px;
-  padding: 5px;
+  padding: 15px 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -589,16 +589,32 @@ a {
 
 /* POSTS ON PROFILE */
 
-.posts-list{
+.posts-list {
+  width: 100%;
   display: grid;
-  grid-template-columns: 300px 300px 300px;
-  grid-template-rows: 300px 300px 300px;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
 }
 
-.post-on-profile{
-  width: 10%;
-  height: 10%;
+.post-on-profile {
+  aspect-ratio: 1;
 }
+
+.grid-item {
+  width: 100%; 
+  height: 100%; 
+  position: relative;
+  overflow: hidden;
+}
+
+.grid-item-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+
 
 /* -------------------- */
 
