--- a/src/index.css
+++ b/src/index.css
@@ -328,7 +328,7 @@ a {
 }
 
 .more-dropdown-container .menu-bar {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   padding: 16px;
   margin: 0;
   min-height: 20px;
@@ -397,7 +397,7 @@ a {
 
 .post-header label {
   cursor: pointer;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 
 .post-header label.loading{
@@ -463,7 +463,7 @@ a {
 .post-description h4 {
   font-weight: 700;
   margin-bottom: 10px;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 
 .post-description h4.loading{
@@ -472,7 +472,7 @@ a {
 }
 
 .description-paragraph {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   overflow: hidden;
   max-height: 40px;
   max-width: 100%;
@@ -499,6 +499,62 @@ a {
   display: inline;
   padding: 0;
   margin: 0;
+}
+
+.liked-by{
+  display: flex;
+  font-size: 0.8rem;
+  margin-bottom: 10px;
+  align-items: center;
+}
+
+.liked-by a:nth-child(n+2){
+  margin: 0 5px;
+  font-weight: 700;
+}
+
+.liked-by a:nth-child(1){
+  margin-right: 5px;
+}
+
+.liked-by a:nth-child(1) img{
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  object-fit: contain;
+}
+
+/* COMMENTS */
+
+.add-comment-container{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.add-comment{
+  border: none;
+  border-bottom: 1px solid rgb(224, 222, 222);
+  width: 100%;
+  padding-bottom: 15px;
+  margin-top: 10px;
+}
+
+.add-comment:focus{
+  outline: none;
+}
+
+.add-comment-container button{
+  background: none;
+  border: none;
+  color: #0095f6;
+  font-weight: 700;
+  cursor: pointer;
+  border-bottom: 1px solid rgb(224, 222, 222);
+}
+
+.add-comment-container button:hover{
+  color: black;
 }
 
 /*------------------------*/
@@ -547,7 +603,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .main-data div:nth-child(1) h5{
