--- a/src/index.css
+++ b/src/index.css
@@ -312,6 +312,7 @@ a {
 .notification {
   display: flex;
   padding: 15px 20px 15px;
+  width: calc(100% - 40px);
 }
 
 .notif-by img {
@@ -339,6 +340,7 @@ a {
 
 .post-link-notif img{
   width: 40px;
+  margin-left: 30px;
 }
 
 .plus-black-active path:nth-child(4) {
@@ -788,6 +790,8 @@ a {
 }
 
 .notification-container {
+  font-size: 0.8rem;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
