--- a/src/index.css
+++ b/src/index.css
@@ -729,6 +729,7 @@ a {
   justify-content: center;
   border: none;
   cursor: pointer;
+  margin: 0 5px;
 }
 
 .follow-button{
@@ -1032,4 +1033,13 @@ a {
   display: flex;
   height: 1px;
   border-bottom: 1px solid rgb(224, 222, 222);
+}
+
+
+/* Messenger */
+
+.messenger{
+  width: 100%;
+  height: 100vh;
+  display: flex;
 }
