--- a/src/index.css
+++ b/src/index.css
@@ -1038,8 +1038,64 @@ a {
 
 /* Messenger */
 
+.chat-box{
+  z-index: -10;
+  border-radius: 0;
+  box-shadow: none;
+}
+
+.messages-heading{
+  padding: 0 15px!important;
+  margin-top: 40px;
+}
+
+.messages-span{
+  font-weight: 700;
+  padding: 15px;
+  margin-top: 15px;
+  font-size: 0.9rem;
+}
+
 .messenger{
   width: 100%;
   height: 100vh;
   display: flex;
+}
+
+.chats{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.chat{
+  display: flex;
+  height: 50px;
+  width: calc(100% - 40px);
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.chat:hover{
+  background-color: rgb(252, 252, 252);
+}
+
+.friends-photo{
+  height: 100%;
+  margin-right: 10px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.friends-info{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  font-size: 0.8rem;
+}
+
+.friends-info span:nth-child(2){
+  color: rgb(150, 150, 150);
 }
