--- a/src/index.css
+++ b/src/index.css
@@ -1131,6 +1131,11 @@ a {
   font-size: 0.8rem;
 }
 
+.friend-info img{
+  width: 50px;
+  height: 50px;
+}
+
 .friends-info span:nth-child(2){
   color: rgb(150, 150, 150);
 }
