--- a/src/index.css
+++ b/src/index.css
@@ -1053,6 +1053,12 @@ a {
   border-right: 1px solid rgb(224, 222, 222);
 }
 
+.chats-span{
+  font-weight: 700;
+  font-size: 0.9rem;
+  margin: 15px;
+}
+
 .empty-messages{
   width: 100%;
   height: 100%;
@@ -1117,7 +1123,8 @@ a {
 }
 
 .friends-photo{
-  height: 100%;
+  height: 50px;
+  width: 50px;
   margin-right: 10px;
   border-radius: 50%;
   object-fit: cover;
@@ -1188,7 +1195,7 @@ a {
 
 .send-button{
   position: absolute;
-  right: 120px;
+  right: 50px;
   top: 32px;
   font-size: 0.8rem;
   cursor: pointer;
