--- a/src/index.css
+++ b/src/index.css
@@ -289,6 +289,7 @@ a {
   box-shadow: 10px 0 5px -2px rgba(97, 97, 97, 0.1);
   transition: all 0.5s ease;
   opacity: 0;
+  overflow: scroll;
 }
 
 .dropdown-menu.active {
