--- a/src/index.css
+++ b/src/index.css
@@ -1433,6 +1433,12 @@ a {
 .comments-in-post{
   overflow-y: scroll;
   margin: 15px;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.comments::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
 
 .interactions.in-post{
@@ -1458,4 +1464,32 @@ a {
 
 .bold{
   font-weight: 700;
+}
+
+.comments-in-post{
+  width: calc(100% - 30px);
+}
+
+.comment {
+  display: flex;
+  width: calc(100% - 30px);
+  text-wrap: wrap;
+  margin-bottom: 10px;
+}
+
+.comment a img{
+  width: 35px;
+  height: 35px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-right: 12px;
+}
+
+.comment p{
+  width: 90%;
+  word-wrap: break-word;
+}
+
+.comment p a{
+  font-weight: 600;
 }
